# domain-glossary

./: README.md
glossary-client/: addlinkdialog.ui  addtermdialog.cpp  addtermdialog.h  addtermdialog.ui  clientsideproxy.cpp  clientsideproxy.h  common.cpp  common.h  empty.html  glossary-client.pro  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  requestbuilder.cpp  requestbuilder.h  resources.qrc  termindexmodel.cpp  termindexmodel.h  textedit.cpp  textedit.h  texteditor.cpp  texteditor.h
glossary-server/: CMakeLists.txt  clientworker.cpp  clientworker.h  common.cpp  common.h  config.xml  contents.xml  dataprovider.cpp  dataprovider.h  glossary-server.pro  listener.cpp  listener.h  main.cpp  serviceprovider.cpp  serviceprovider.h
